--- a/index.html
+++ b/index.html
@@ -4,10 +4,124 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flores Amarillas &lt;3</title>
-    <link rel="stylesheet" href="Css/style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inclusive+Sans:ital@1&display=swap" rel="stylesheet">
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Inclusive Sans', sans-serif;
+            background: linear-gradient(70deg, blue, purple, pink);
+        }
+
+        h1 {
+            text-align: center;
+            font-size: 100px;
+        }
+
+        .Con-2 {
+            display: none;
+        }
+
+        canvas {
+            display: block;
+        }
+
+        .Contenedor {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .Con {
+            display: flex;
+            place-content: center;
+            align-items: center;
+            margin-top: 15px;
+        }
+
+        .Texto {
+            display: none;
+        }
+
+        .Texto h2 {
+            font-size: 50px;
+        }
+
+        #B12 {
+            margin-left: 30px;
+        }
+
+        .Button {
+            font-family: monospace;
+            font-size: x-large;
+            transition-duration: 0.2s;
+            padding: 10px;
+            border-radius: 8px;
+            background-color: greenyellow; 
+            color: black; 
+            border: 2px solid green;
+            cursor: pointer;
+        }
+        
+        .Button:hover {
+            transform: scale(1.1);
+            border-radius: 14px;
+            box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+            color: black;
+            background-color: white;
+        }
+
+        .Contenedor-Binicio {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 10px;
+        }
+
+        .Con-Emergente {
+            align-items: center;
+            text-align: center;
+            padding: 20px;
+            display: flex;
+        }
+
+        .cua {
+            display: none;
+            position: fixed;
+            top: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 300px;
+            padding: 30px;
+            background-color: #f9f9f9;
+            border: 2px solid greenyellow;
+            border-radius: 5px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+            text-align: center;
+            animation: aparecer 0.5s ease-out;
+        }
+
+        @keyframes aparecer {
+            0% {
+                opacity: 0;
+                transform: translateX(-50%) translateY(-20px);
+            }
+            50% {
+                opacity: 0.5;
+                transform: translateX(-50%) translateY(-10px);
+            }
+            100% {
+                opacity: 1;
+                transform: translateX(-50%) translateY(0);
+            }
+        }
+
+        @media (max-width: 468px) {
+            body {
+                background: linear-gradient(100deg, blue, purple, pink);
+            }
+        }
+    </style>
 </head>
 <body>
 
@@ -117,6 +231,12 @@
             document.querySelector(".Contenedor-Binicio").style.display = "none";
             document.querySelector(".Con-2").style.display = "block";
             CrearVarias(); // Dibuja las flores al cerrar la ventana emergente
+        });
+    </script>
+
+</body>
+</html>
+
         });
     </script>
 
