--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </div>
 
     <div class="Con-2">
-        <h1 id="Titulo">Shuter y Estrellita por siempre</h1>
+        <h1 id="Titulo">Heber Gael Y La Cricosa por siempre</h1>
     </div>
 
     <main class="Contenedor">
@@ -231,12 +231,6 @@
             document.querySelector(".Contenedor-Binicio").style.display = "none";
             document.querySelector(".Con-2").style.display = "block";
             CrearVarias(); // Dibuja las flores al cerrar la ventana emergente
-        });
-    </script>
-
-</body>
-</html>
-
         });
     </script>
 
